Programming Languages/Hw2/part4/t18.output
running e2c
compiling the C generated code
t18.c: In function ‘main’:
t18.c:4:2: error: expected expression before ‘=’ token
  = ;
  ^
t18.c:5:16: error: ‘a’ undeclared (first use in this function)
 printf("%d\n", a + );
                ^
t18.c:5:16: note: each undeclared identifier is reported only once for each function it appears in
t18.c:5:20: error: expected expression before ‘)’ token
 printf("%d\n", a + );
                    ^
t18.c:6:5: error: expected expression before ‘<=’ token
 if( <= 0){
     ^
t18.c:10:2: error: expected expression before ‘=’ token
  = ;
  ^
t18.c:14:5: error: expected expression before ‘<=’ token
 if( <= 0){
     ^
t18.c:20:8: error: expected expression before ‘<=’ token
 if( -  <= 0){
        ^
t18.c:21:2: error: expected expression before ‘=’ token
  = ;
  ^
t18.c:27:5: error: expected expression before ‘<=’ token
 if( <= 0){
     ^
t18.c:31:2: error: expected expression before ‘=’ token
  = ;
  ^
t18.c:34:5: error: expected expression before ‘<=’ token
 if( <= 0){
     ^
t18.c:35:2: error: expected expression before ‘=’ token
  = ;
  ^
